@@ -5,10 +5,14 @@ Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.de
 Uploaders: Stefano Rivera <stefanor@debian.org>
 Build-Depends:
  debhelper (>= 7.0.50~),
+ locales,
  python-all (>= 2.6.6-3~),
  python-docutils,
+ python-munkres,
+ python-mutagen,
  python-setuptools,
  python-sphinx (>= 1.0.7+dfsg),
+ python-unidecode,
  python-unittest2
 X-Python-Version: >= 2.5
 Standards-Version: 3.9.2
