@@ -1,2 +1,2 @@
-private-module
 unittest2
+private-module
