@@ -8,8 +8,15 @@ override_dh_auto_build:
 	$(MAKE) -C docs html man BUILDDIR=$(CURDIR)/build/docs
 
 override_dh_auto_test:
+	# Tests (non-destructively) open the database
+	mkdir -p build/home
+	# Tests need UTF-8 locale
+	mkdir -p build/locale
+	localedef -f UTF-8 -i en_US build/locale/en_US.UTF-8/
 	set -e -x; \
 	for python in $(shell pyversions -r); do \
+		HOME=$(CURDIR)/build/home \
+		LOCPATH=$(CURDIR)/build/locale LC_ALL=en_US.UTF-8 \
 		$$python setup.py test; \
 	done
 
